--- a/app/globals.css
+++ b/app/globals.css
@@ -4,20 +4,20 @@
 @tailwind utilities;
 
 *::-webkit-scrollbar {
-    width: 15px;
+  width: 15px;
 }
 
 /* Track */
 *::-webkit-scrollbar-track {
-    background: transparent;
-    border: 4px solid transparent;
-    background-clip: content-box;   /* THIS IS IMPORTANT */
+  background: transparent;
+  border: 4px solid transparent;
+  background-clip: content-box; /* THIS IS IMPORTANT */
 }
 
 /* Handle */
 *::-webkit-scrollbar-thumb {
-    background: linear-gradient(to bottom, #0f0c29,#302b63,#24243e);
-    border-radius: 100px;
+  background: linear-gradient(to bottom, #0f0c29, #302b63, #24243e);
+  border-radius: 100px;
 }
 
 .cursive {
@@ -86,12 +86,12 @@ html {
 
 .button-64 {
   align-items: center;
-  background-image: linear-gradient(144deg,#AF40FF, #5B42F3 50%,#00DDEB);
+  background-image: linear-gradient(144deg, #af40ff, #5b42f3 50%, #00ddeb);
   border: 0;
   border-radius: 8px;
   box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
   box-sizing: border-box;
-  color: #FFFFFF;
+  color: #ffffff;
   display: flex;
   font-family: Phantomsans, sans-serif;
   font-size: 1rem;
@@ -125,6 +125,14 @@ html {
 
 .button-64:hover span {
   background: none;
+}
+
+.content-wrapper {
+  @apply text-white text-sm;
+}
+
+.content-wrapper span {
+  @apply text-lg font-semibold;
 }
 
 @media (min-width: 768px) {
